--- a/app/views/welcome/dashboard.html.haml
+++ b/app/views/welcome/dashboard.html.haml
@@ -1,37 +1,17 @@
-%p dashboard.html.haml
+    
+<h2>An unordered set of Use Cases Generators</h2>
 
-%strong How is that dashboard coming?
+<ul>
+<li>Dashboard -- What's Going On ?
 
-%h1 
-  %strong Use Cases -- What do you want to do?
+<li>Calendar -- what deadlines are we facing?, what's been scheduled, e.g. today, tomorrow, rest of week
 
-%h2
-  %p "What's Going On"
-  %p Calendar -- what deadlines are we facing?, what's been scheduled, e.g. today, tomorrow, rest of week
-  
-
-%h2  
-  %p "Housekeeping"
-  %p Housekeeping (Static data) -- stuff like names & addresses, materials, conditions and so on
-  
-%h2
-  %p "Prospecting"
-  %p Prospecting, marshalling, responding, status management
-  
-
-%h2
-  %p "Lanes & Lane Development"
-  %p Operations -- create, supervise, find staff
-  %p Logistics, equipment, drivers, support 
-
-%h2
-  %p "Loads"
-  %p Quote based on one or more Solutions 
-  %p Routes & Schedules.   
-  
-%h2
-  %p "Bookkeeping"
-  %p Invoice Management 
+<li>Housekeeping --stuff like names & addresses, materials, conditions and so on
+<li>Lanes -- Create them, monitor them
+<li>Operations -- create, supervise, find staff
+<li>Logistics --  equipment, drivers, support
+<li>Loads -- Boards, etc.
+<li>Bookkeeping & Invoice Management
   
   
   
