--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,8 +2,8 @@
 
 %center
   %h1 Roll365
-  %h1 Blockchain based software for shippers and their agents
-  %h2 PoC and UX research version
+  %h1 Software for Over the Roat Freight Industry
+  %h2 Blockchain research version
   
   %h3 
     = link_to 'Admin Dashboard', dashboard_path
