--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,21 +1,14 @@
-%header 
+.container-fluid
 
-   
-  %p.floatleft
-  %p.Fr8.Network
-  //= image_tag "logo.png", size: "280x90", alt: "logo"
+  &nbsp
+  &nbsp
 
-          
-  %p.floatright
-  -#= link_to "Dashboard", dashboard_path
-  &nbsp;
-  -#= link_to "Logon or Register", admin_root_path
-  &nbsp;
-  = link_to 'Home', root_path
-  %p
-    - flash.each do |name, msg|
-      = content_tag :div, msg, class: name
-  %hr
-  
-  %br
-  %br
+  .row
+    .col-sm-1
+      
+  .row
+    .col-md-12
+      = link_to 'Home', root_path  
+      
+      - flash.each do |name, msg|
+        = content_tag :div, msg, class: name
