--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -10,7 +10,7 @@
       = link_to "person_address...", person_address_path(@person)
     -else
       = @person.display_address 
-      = link_to "address.4..", edit_person_address_path(@address)
+      = link_to "address...", edit_address_path(@address)
 
   %p
     -#= link_to 'Edit Address', edit_person_address_path(@person)
