Show refinements for the polymorphs, put Addresses and Identifiers together in companies#show and people#show.  When this all works, and there's a rudimentary way to track calls and show lanes it's code complete 1.x.  Beyond that, 1.n is feature releases ad 1.n.m are defect patches.

--- a/app/views/addresses/show.html.haml
+++ b/app/views/addresses/show.html.haml
@@ -2,7 +2,10 @@
 
 .container-fluid
 
-  %h1 Address of: #{@address.addressable.display_name}
+  %h1 
+    Address
+    @address.addressable.display_name
+  
   %p
     %b Rollodex type:
     = link_to @address.addressable_type.pluralize, addresses_path
@@ -58,15 +61,13 @@
     .col-sm-10
       = @address.latitude
 %p
--#= link_to 'Edit Address', edit_address_path(@address)
--#= link_to "Return", @address.addressable
 
-= link_to edit_address_path(@address), class: 'btn btn-primarary' do
+= link_to edit_address_path(@address), class: 'btn btn-secondary' do
   %i.glyphicon.glyphicon-plus
-    Edit Address
+    Edit
 %nbsp
 %nbsp
 = link_to @address.addressable, class: 'btn btn-secondary' do
   %i.glyphicon.glyphicon-plus
-    Return
+    Go Back
       
