--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -11,8 +11,8 @@
           = @company.display_address
           = link_to 'address...', company_addresses_path(@address)
   
-    = render "shared/contacts_for"
-
+  = render "shared/contacts_for"
+  &nbsp
   .row
     .col-sm-2
       %em
