Changed background to palegrey, font-family to Montserrat, letter-spacing: 0.02, font-size to 18px, mouse-over color to blue.  These match Fr8 except for background.

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -9,7 +9,7 @@
           = @company.line_of_business
         %p
           = @company.display_address
-          = link_to 'address...', company_addresses_path(@address)
+          = link_to 'address...', company_address_path(@company)
   
   = render "shared/contacts_for"
   &nbsp
