--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,15 +17,16 @@
 
 
 body {
-  background-color: palegreen;
+  background-color: palegrey;
 
-  font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, “Helvetica Neue”, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, “Helvetica Neue”, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
   /* default is 1rem or 16px */
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
+  letter-spacing: 0.02;
 
   tr:hover, h1:hover, a:hover {
-    background-color: yellow;
+    background-color: lightblue;
   }
 }
