--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -1,7 +1,7 @@
 %h1
   = @company.name
 = @company.display_address
-= link_to "address...", addresses_path(@company)
+= link_to "address...", edit_company_address_path(@company)
 
 %hr/
 = render 'form', company: @company
