--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -11,10 +11,10 @@
           
 
     .col-6
-      %h3 Companies
+      %h3 Carriers
       = @companies.count 
       listed
-      %hr
+    
     
       %table.table.table-striped
 
