Rework of seed.rb.  Added error checking to work with validations and removed about half the setup for legacy ops.  Added @people to companies#show.  This supports contacts_for for both kinds of identifier.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -21,6 +21,8 @@
   = link_to 'Contacts', identifiers_path
   &nbsp;
   = link_to 'Equipment', equipment_index_path
+  &nbsp
+  = link_to 'Materials', materials_path
   &nbsp;
   = link_to 'People', people_path
   &nbsp;
