--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 
 
 body {
-  background-color: palegrey;
+  background-color: #e5e5e5;
 
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, “Helvetica Neue”, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
   /* default is 1rem or 16px */
@@ -27,6 +27,6 @@ body {
   letter-spacing: 0.02;
 
   tr:hover, h1:hover, a:hover {
-    background-color: lightblue;
+    background-color: lightyellow;
   }
 }
