Dropped the link_to 'edit' links for company identifiers.  Now using collection link instead, works fine.

--- a/app/views/shared/_contacts_for.html.haml
+++ b/app/views/shared/_contacts_for.html.haml
@@ -2,6 +2,8 @@
 .container-fluid
 
 %em Company Contacts
+= link_to 'contacts...', company_identifiers_path(@company)
+
 %hr
   .row
     .col-sm-2
@@ -34,8 +36,7 @@
           = i.name + ':'          
         .col-sm-2
           = i.value
-        .col-sm-6
-          = link_to 'edit', people_identifier_path(i)
+
       
      
       
