--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,13 +2,11 @@
 
 %center
   %h1 Roll365
-  %h1 Software for Over the Roat Freight Industry
-  %h2 Blockchain research version
-  
-  %h3 
-    = link_to 'Admin Dashboard', dashboard_path
-    &nbsp;
-    = link_to "Fr8.Network", "https://Fr8.network", :target => "_blank"
+  %h1 Software for the OTR Freight Industry
+  %h2 R & D Version
+
+%hr
+
 
 %center
 
