--- a/app/views/identifiers/index.html.haml
+++ b/app/views/identifiers/index.html.haml
@@ -21,7 +21,7 @@
         %thead
           %tr
             %th Kind
-            %th Orgaization or Person
+            %th Organization or Person
             %th Name
             %th Value
             %th Rank or Priority
@@ -46,3 +46,6 @@
         = link_to new_company_identifier_path(@parent), class: 'btn btn-secondary' do
           %i.glyphicon.glyphicon-plus
             New Contact Info
+  .row
+    .col-2 
+      = link_to "Back to Company", company_path(@parent)
