--- a/app/views/shared/_contacts_for.html.haml
+++ b/app/views/shared/_contacts_for.html.haml
@@ -2,7 +2,8 @@
 .container-fluid
 
 %em Company Contacts
-= link_to 'contacts...', company_identifiers_path(@company)
+-if @company
+  = link_to 'contacts...', company_identifiers_path(@company)
 
 %hr
   .row
