100% functional target.  60+ changes to controllers and views in order to get every link working properly.  Also moved to more cover image of Dreyage yard--Long Beach? Pretty cohesive set of services.

--- a/app/views/conditions/edit.html.haml
+++ b/app/views/conditions/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @condition
+= link_to 'Show', @equipment
 \|
-= link_to 'Back', conditions_path
+= link_to 'Back', equipment_path
