--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -40,5 +40,5 @@
   %p
   %p
     // search path default is public/images
-    = image_tag "truck.jpg", :size => "520x360" 
+    = image_tag "Drayage-LongBeach.jpg", :size => "520x360" 
 
