--- a/app/views/addresses/show.html.haml
+++ b/app/views/addresses/show.html.haml
@@ -4,7 +4,7 @@
 
   %h1 
     Address
-    @address.addressable.display_name
+    = @address.addressable.display_name
   
   %p
     %b Rollodex type:
