--- a/app/views/conditions/_form.html.haml
+++ b/app/views/conditions/_form.html.haml
@@ -6,26 +6,41 @@
         - @condition.errors.full_messages.each do |message|
           %li= message
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :verbiage
-    = f.text_area :verbiage
-  .field
-    = f.label :indication
-    = f.text_field :indication
-  .field
-    = f.label :status
-    = f.check_box :status
-  .field
-    = f.label :approved
-    = f.check_box :approved
-  .field
-    = f.label :change_approved_by
-    = f.text_field :change_approved_by
-  .field
-    = f.label :change_approved_at
-    = f.datetime_select :change_approved_at
+  
+
+  .form-group
+    = f.label :name, class: "col-sm-4 control-label"
+    .col-sm-8
+      = f.text_field :name, class: "form-control"
+
+  .form-group
+    = f.label :verbiage, class: "col-sm-4 control-label"
+    .col-sm-8
+      = f.text_area :verbiage, class: "form-control"
+
+  .form-group
+    = f.label :indication, class: "col-sm-4 control-label"
+    .col-sm-8
+      = f.text_field :indication, class: "form-control"
+
+  .form-group
+    = f.label :status, class: "col-sm-4 control-label"
+    .col-sm-1
+      = f.check_box :status, class: "form-control"
+     
+  .form-group
+    = f.label :approved, class: "col-sm-4 control-label"
+    .col-sm-1
+      = f.check_box :approved, class: "form-control"
+  
+  .form-group
+    = f.label :change_approved_by, class: "col-sm-4 control-label"
+    .col-sm-8
+      = f.text_field :change_approved_by, class: "form-control"
+
+  .form-group
+    = f.label :change_approved_at, class: "col-sm-4 control-label"
+    .col.sm-8
+      = f.datetime_select :change_approved_at
   .actions
     = f.submit 'Save'
