--- a/app/views/equipment/_form.html.haml
+++ b/app/views/equipment/_form.html.haml
@@ -13,7 +13,8 @@
   .field
     = form.label :company_id
     = form.number_field :company_id
+  .field
+    = form.label :description
+    = form.text_field :description
   .actions
     = form.submit
-
-
