--- a/app/views/equipment/edit.html.haml
+++ b/app/views/equipment/edit.html.haml
@@ -1,5 +1,14 @@
-%h1 Editing Equipment
-= render 'form', equipment: @equipment
-= link_to 'Show', @equipment
-|
-= link_to 'Back', equipment_index_path
+.container_fluid
+  %h1 
+    Edit Equipment
+
+  %h3
+    = @equipment.name
+
+  %p
+
+  = render 'form', equipment: @equipment
+
+  = link_to 'Show', @equipment
+  |
+  = link_to 'Back', equipment_index_path
