--- a/app/views/equipment/show.html.haml
+++ b/app/views/equipment/show.html.haml
@@ -1,10 +1,44 @@
 %p#notice= notice
-%p
-  %strong Name:
-  = @equipment.name
-%p
-  %strong Company:
-  = @equipment.company_id
-= link_to 'Edit', edit_equipment_path(@equipment)
-|
-= link_to 'Back', equipment_index_path
+
+.container-fluid
+
+  %h3
+    
+    = @equipment.name
+  
+  %p
+  .row
+    .col-sm-2
+      %em
+        Attributes
+    .col-sm-10
+      %em
+        Settings
+
+  %p
+  .row      
+    .col-sm-2
+      Name:
+    .col-sm-10
+      = @equipment.name
+  .row      
+    .col-sm-2
+      Owner/Carrier:
+    .col-sm-10
+      = @equipment.company.display_name      
+  .row      
+    .col-sm-2
+      Description
+    .col-sm-10
+      = @equipment.description
+  %p
+  .row    
+    .col-sm-2
+
+      = link_to 'Edit', edit_equipment_path(@equipment)
+      |
+      = link_to 'Back', equipment_index_path
+
+
+
+  
