--- a/app/views/materials/show.html.haml
+++ b/app/views/materials/show.html.haml
@@ -1,12 +1,41 @@
 %p#notice= notice
 
-%p
-  %b Name:
-  = @material.name
-%p
-  %b Description:
-  = @material.description
 
-= link_to 'Edit', edit_material_path(@material)
-\|
-= link_to 'Back', materials_path
+.container-fluid
+
+  %h2
+    Material
+
+  %h3
+    
+    = @material.name
+  
+  %p
+  .row
+    .col-sm-2
+      %em
+        Attributes
+    .col-sm-10
+      %em
+        Settings
+
+  %p
+  .row      
+    .col-sm-2
+      Name:
+    .col-sm-10
+      = @material.name
+ 
+  .row      
+    .col-sm-2
+      Description
+    .col-sm-10
+      = @material.description
+  %p
+  .row    
+    .col-sm-2
+
+      = link_to 'Edit', edit_material_path(@material)
+      |
+      = link_to 'Back', material_index_path
+
