Test to see if the incoming request to Identifiers carries a valid @parent (assigned in Indentifier#show) and if there is none compose index to test against this case.  In other words if this is a direct route from Home, there is no @parent, so don't include a link_to path that uses one.

--- a/app/views/identifiers/index.html.haml
+++ b/app/views/identifiers/index.html.haml
@@ -48,4 +48,7 @@
             New Contact Info
   .row
     .col-2 
-      = link_to "Back to Company", company_path(@parent)
+      -if params.has_key?(:company_id)
+        = link_to "Back to Company", company_path(@parent)
+      -else #no @parent exists, so either khide this link or just go Home.
+        = link_to "Home", root_path
