--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -5,14 +5,25 @@
   %h1 Software for the OTR Freight Industry
   %h2 R & D Version
 
-%hr
+%p
+%center
 
+  %p
+  %p
+  %p
+  %p
+  %p
+  %p
+    // search path default is public/images
+    = image_tag "Drayage-LongBeach.jpg", :size => "520x360" 
+  %p
+  %p
 
 %center
 
   = link_to 'Addresses', addresses_path
   &nbsp;
-  = link_to 'Agreement Conditions', conditions_path    
+  = link_to 'Contract Clauses', conditions_path    
   &nbsp;
   = link_to 'Carriers', companies_path
   &nbsp;
@@ -34,11 +45,5 @@
   &nbsp;
   = link_to 'Lane Development', addresses_path
 
-%center
-
   %p
   %p
-  %p
-    // search path default is public/images
-    = image_tag "Drayage-LongBeach.jpg", :size => "520x360" 
-
