--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,14 +1,22 @@
-.container-fluid
 
-  &nbsp
-  &nbsp
+.row.justify-content-md-center
+  .col.col-lg-8
+    
+  .col-md-auto
+    
+  .col.col-lg-2
+    = link_to 'Home', root_path
 
-  .row
-    .col-sm-1
+.row
+  .col-sm-1
       
-  .row
-    .col-md-12
-      = link_to 'Home', root_path  
+.row
+  .col-md-12
+   
+.row
+  .col-md-12
       
-      - flash.each do |name, msg|
-        = content_tag :div, msg, class: name
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: name
+
+
