--- a/app/views/conditions/index.html.haml
+++ b/app/views/conditions/index.html.haml
@@ -10,7 +10,7 @@
           
 
     .col-6
-      %h3 Conditions
+      %h3 Contract & Agreement Clauses
       = @conditions.count 
       listed
       %hr
@@ -19,8 +19,10 @@
 
         %thead
           %tr
-            %th{align: 'left'} Name
-            %th{align: 'left', valign: 'top', width: '224'}Verbiage
+            %th{align: 'left'} 
+              %em Name
+            %th{align: 'left', valign: 'top', width: '224'}
+              %em Verbiage
             %th{align: 'left', width: '32'}Indication
             %th{align: 'left', width: '32'}Status
             %th{align: 'left', width: '32'}Approved
