--- a/app/views/equipment/index.html.haml
+++ b/app/views/equipment/index.html.haml
@@ -21,7 +21,9 @@
 
         %thead
           %tr
-            %th Model
+            %th
+              %em
+                Name, Model
             %th Company
             
 
