--- a/app/views/identifiers/index.html.haml
+++ b/app/views/identifiers/index.html.haml
@@ -22,8 +22,12 @@
           %tr
             %th Kind
             %th Organization or Person
-            %th Name
-            %th Value
+            %th 
+              %em
+                Name
+            %th
+              %em
+                Value
             %th Rank or Priority
             
 
