--- a/app/views/tips/_search_panel.html.haml
+++ b/app/views/tips/_search_panel.html.haml
@@ -4,7 +4,7 @@
     = f.label :name
     = f.text_field :name_cont, class: 'form-control'
 
-    = f.label :fire_ant_risk_level
+    = f.label 'Risk level'
     = f.text_field :fire_ant_risk_level_cont, class: 'form-control'
     
     = f.submit class: 'btn btn-primary'
