--- a/app/views/conditions/edit.html.haml
+++ b/app/views/conditions/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @equipment
+= link_to 'Show', @condition
 \|
-= link_to 'Back', equipment_path
+= link_to 'Back', condition_path
