New People capability added to companies#show.  This was left out apparently.

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -19,6 +19,8 @@
         People & Associates
     .col-sm-10
       = link_to 'people...', company_people_path(@company)  
+      or
+      = link_to 'new person...', new_company_person_path(@company)
   
   .row
     .col-sm-2
