--- a/app/views/shared/_contacts_for.html.haml
+++ b/app/views/shared/_contacts_for.html.haml
@@ -23,7 +23,7 @@
 
   - if @identifiers.empty?
     No identifiers found.  
-    = link_to 'Identifiers', new_person_identifier_path(@person)
+    -#= link_to 'Identifiers', new_person_identifier_path(@person)
   - else
 
 
