--- a/app/views/tips/index.html.haml
+++ b/app/views/tips/index.html.haml
@@ -28,7 +28,7 @@
                 Risk Level
             %th{align: 'left', valign: 'top'} Company
             %th{align: 'left', width: '32'} Fee
-            %th Description (+soon)
+            %th Description
             
 
         %tbody
@@ -40,7 +40,7 @@
               %td 't.b.d'
               %td= tip.fee
               
-               
+              %td= '(soon)'
               %td= link_to 'Show', tip
               %td= link_to 'Edit', edit_tip_path(tip)
               %td= link_to 'Destroy', tip, method: :delete, data: { confirm: "Are you sure you want to delete #{tip.name}?" } 
