WIP on companies#show to see if routing for people can be improved.  A little, but not as direct as needed to be.

--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -2,7 +2,7 @@
 .container-fluid
 
   %h1 Finder
-
+  = will_paginate
   .row
 
     .col-2
@@ -13,6 +13,10 @@
       %h3 Addresses
       = @addresses.count 
       listed
+
+      
+      
+        
       %hr
 
       %table.table.table-striped
