Back route from company -> person etc. now bi-directional for both points of departure, that is from companies for from people.  'Back' continues to mean 'Back to People', that is to People#index.  This should be relabled, to say 'People' or removed.  Let's see what reactions it produces, if any.  Conclusion:  back routes are perfectly possible but easy become complicated.  Enable them from the controller side, e.g. @parent = ... unless params[:company_id] not available.  Another way to put this is:  capture the return path parameters in the controller before rendering the path that will link_to the route.

--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -71,8 +71,12 @@
   %p
   = link_to 'Edit', edit_person_path(@person)
   &nbsp;
-  = link_to 'Back', people_path
+  = link_to 'Back', people_path 
+
+  - unless @parent.nil?
+    = link_to 'Parent', company_path(@parent)
   
+
   &nbsp;
   = link_to companies_path, class: 'btn btn-secondary' do
     %i.glyphicon.glyphicon-plus
