Routing for actions on address members (permitted for parent collections) so we return to action we left from.  Working fine, perhaps not perfect but difficult to say.  Best so far and stable.

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -8,8 +8,14 @@
         %h3  
           = @company.line_of_business
         %p
+        
           = @company.display_address
-          = link_to 'address...', company_address_path(@company)
+          
+          - if @company.addresses.nil?
+            = link_to 'new address', new_company_address_path(@company)
+          - else
+            = link_to 'addresses', company_addresses_path(@company)
+          
   
   = render "shared/contacts_for"
   &nbsp
