WIP on companies#show grid for Contacts sections. An exercise in Bootstrap grid work.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,4 +32,15 @@ body {
 footer{
   font-size: 12px;
   }
+
+h3{ font-size: 24px
+  }
+
+.data,p {
+    color: grey;
+    font-size: 14px;
+  }
+.tbg {
+  background-color: lightblue
+  }
 }
