Companies#show _people_for col wider for identifiers and uses line break class .w-100.  Works fine.

--- a/app/views/shared/_people_for.html.haml
+++ b/app/views/shared/_people_for.html.haml
@@ -10,10 +10,10 @@
   .row
     .col-sm-2.data
       = p.display_name
-    .col-sm-2.data
+    .col-sm-4.data
     
       - @identifiers.each do |i|
-        = i.value
-        = i.name
+        = i.value + ' -'
+        = i.name + ' -'
         = i.rank.ordinalize
-    .row
+        .w-100
