--- a/app/views/companies/_form.html.haml
+++ b/app/views/companies/_form.html.haml
@@ -7,6 +7,11 @@
           %li= message
 
   .form-group
+    = form.label :name, class: "col-md-4 control-label"
+    .col-md-8
+      = form.text_field :name, class: "form_control"
+
+  .form-group
     = form.label :line_of_business, class: "col-md-4 control-label" 
     .col-md-8
       = form.text_field :line_of_business, class: "form-control"
